XP-2473 Content preview - Long content name overlaps widget selector - Added method that calculates and sets top offset for details panel based on header height - Fixed problem with incorrect state of details toggle button

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/mobile-content-item-statistics-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/mobile-content-item-statistics-panel.less
@@ -15,10 +15,6 @@
     display: none;
   }
 
-  .content-item-preview-panel {
-    top: 36px;
-  }
-
   @media screen and (max-width: 540px) {
     display: block;
   }
